# anolis

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  e2e-failure-ci.txt  mypy.ini  output.txt  requirements-lock.txt  requirements.txt  vcpkg.json  version-locations.txt
.ci/: dependency-pins.yml
.github/workflows/: ci.yml  content.yml  extended.yml  release.yml
behaviors/: bioreactor_stir_dual_dosing.xml  bioreactor_stir_feed.xml  bioreactor_stir_feed_stage1.xml
cmake/: Warnings.cmake
config/bioreactor/: README.md  anolis-runtime.bioreactor.automation-stage1.yaml  anolis-runtime.bioreactor.automation.yaml  anolis-runtime.bioreactor.full.yaml  machine-profile.yaml  provider-bread.bioreactor.yaml  telemetry-export.bioreactor.yaml
config/conformance/: anolis-runtime.conformance.yaml  machine-profile.yaml
config/mixed-bus-providers/: README.md  anolis-runtime.mixed.win.mock.conflict.yaml
core/: CMakeLists.txt
core/automation/: README.md  bt_nodes.cpp  bt_nodes.hpp  bt_nodes_sanity.cpp  bt_runtime.cpp  mode_manager.cpp  mode_manager.hpp
core/control/: call_router.cpp  call_router.hpp
core/http/: json.cpp  server.hpp
core/http/handlers/: system_handlers.cpp
core/provider/: i_provider_handle.hpp  provider_config.hpp  provider_handle.cpp  provider_registry.hpp  provider_supervisor.cpp  provider_supervisor.hpp
core/registry/: device_registry.cpp  device_registry.hpp
core/runtime/: config.cpp  config.hpp  ownership_validation.cpp  ownership_validation.hpp  runtime.cpp  runtime.hpp  signal_handler.cpp
core/src/: main.cpp
core/state/: state_cache.cpp  state_cache.hpp
docs/: Doxyfile  README.md  architecture.md  automation-demo.md  automation.md  configuration-schema.md  configuration.md  cpp-documentation-standard.md  dependencies.md  getting-started.md  http-api.md  index.md  local-verification.md  providers.md  safety.md
docs/contracts/: README.md  handoff-package-baseline.md  machine-profile-baseline.md  runtime-config-baseline.md  runtime-http-baseline.md  telemetry-timeseries-baseline.md
docs/http/: README.md
docs/http/examples/: README.md  automation-status.200.json  automation-tree.200.json  device-capabilities.200.json  manifest.yaml  mode.post.200.json  state-collection.200.json
docs/workbench/: commissioning-handoff-runbook.md  handoff-package-v1.md
examples/: anolis-runtime-telemetry.yaml  anolis-runtime.yaml
schemas/: README.md
schemas/http/: README.md
schemas/machine/: machine-profile.schema.json
tests/contracts/machine-profile/: README.md  manifest.yaml  validate-machine-profiles.py
tests/contracts/machine-profile/valid/: 01-minimal.yaml  behavior.xml  provider0.yml  runtime.manual.yml
tests/contracts/runtime-config/: README.md  manifest.yaml  validate-runtime-configs.py
tests/contracts/runtime-config/valid/: 05-hooks-quoted-numeric-like-scalars.yaml  06-hooks-scalar-edge-cases.yaml
tests/contracts/runtime-http/: README.md  validate-runtime-http-examples.py
tests/contracts/runtime-http/examples/: call.200.json  device-state.200.json  devices.200.json  error.400.json  error.404.json  error.503.json  events.200.txt  manifest.yaml  mode.get.200.json  parameters.get.200.json  parameters.post.200.json  providers-health.200.json  runtime-status.200.json
tests/integration/: automation_suite.py  provider_config_suite.py  test_integration.py  test_telemetry_export_service_e2e.py  test_telemetry_export_service_unit.py
tests/integration/fixtures/: provider-minimal.yaml  provider-multi-tempctl.yaml  provider-sim-default.yaml
tests/integration/fixtures/behaviors/: demo.xml  test_noop.xml
tests/scenarios/: test_scenarios.py
tests/unit/: CMakeLists.txt  bt_nodes_test.cpp  call_router_test.cpp  config_test.cpp  event_emitter_test.cpp  http_handlers_test.cpp  mode_manager_test.cpp  provider_handle_test.cpp  provider_registry_test.cpp  provider_supervisor_test.cpp  runtime_ownership_validation_test.cpp  signal_handler_test.cpp
tests/unit/helpers/: hello_protocol_mismatch_provider.cpp
tools/: package.py  verify-local.sh
tools/contracts/: validate-doc-links.py  validate-handoff-packages.py  validate-machine-profiles.py  validate-runtime-configs.py  validate-runtime-http-conformance.py  validate-runtime-http-examples.py  validate-runtime-http-openapi.py
tools/docker/: test-telemetry.ps1  test-telemetry.sh
tools/operator-ui/: README.md  REFACTORING.md  index.html  package.json  style.css
tools/operator-ui/js/: api.js  app.js  automation.js  config.js  contracts.js  device-detail.js  device-overview.js  sse.js  telemetry.js  ui.js
tools/operator-ui/tests/: contracts.test.mjs
tools/system-composer/: README.md  start.cmd  start.sh
tools/system-composer/backend/: launcher.py  paths.py  projects.py  renderer.py  server.py  validator.py
tools/system-composer/catalog/: providers.json
tools/system-composer/frontend/: index.html
tools/system-composer/frontend/css/: style.css
tools/system-composer/frontend/js/: app.js  sidebar.js  validation.js
tools/system-composer/schema/: system.schema.json
tools/system-composer/templates/bioreactor-manual/: system.json
tools/system-composer/tests/: test_templates.py  test_validator.py
tools/system-composer/tests/unit/: smoke_system_composer.py  test_paths_runtime_support.py  test_projects_validation.py  test_validator.py
tools/telemetry_export/: README.md  export_service.py
tools/telemetry_export/examples/: query_signals.py
tools/telemetry_export/export_core/: config.py  flux_builder.py  influx_client.py  models.py  serialization.py
tools/workbench/: README.md  package.json  pyproject.toml  start.cmd  start.sh
tools/workbench/backend/: exporter.py  package_cli.py  package_validator.py  server.py
tools/workbench/frontend/: index.html
tools/workbench/frontend/css/: style.css
tools/workbench/frontend/js/: app.js  operate-workspace.js
tools/workbench/tests/unit/: test_exporter.py  test_package_validator.py  test_shell_route_support.py  workbench_guards.test.mjs
(+8 files in other folders)
