[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anolis-workbench-backend"
version = "0.0.0"
description = "Internal Anolis Workbench backend package."
requires-python = ">=3.10"

[tool.setuptools]
packages = ["anolis_workbench_backend"]

[tool.setuptools.package-dir]
anolis_workbench_backend = "backend"

[tool.setuptools.package-data]
anolis_workbench_backend = ["schemas/*.json"]
